first_season-section_done

--- a/landing/index.html
+++ b/landing/index.html
@@ -22,9 +22,9 @@
         <nav class="main-menu">
           <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">How it works</a></li>
-            <li><a href="#">Team</a></li>
+            <li><a href="#services-link">team 7</a></li>
+            <li><a href="#first-season">First season</a></li>
+            <li><a href="#">Second season</a></li>
             <li><a href="#">Our blog</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -40,10 +40,13 @@
               FUCK FILLER
             </h1>
             <div>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione,
-              fugit. Commodi hic magni ipsam omnis vitae temporibus fuga,
-              accusantium rem officiis eveniet quidem aliquam ipsum? Praesentium
-              iste quasi excepturi dicta.
+              Познакомьтесь с Наруто Узумаки – юным ниндзя, которому предстоит
+              пройти долгий путь к своей мечте. Однако для достижения любой цели
+              нужны верные товарищи, которых Наруто предстоит обрести. Эта
+              история о том, как найти в себе силы не сдаваться, когда никто
+              вокруг не верит в успех. А ещё это исключительная и неповторимая в
+              своём роде классика – самое занимательное приключение ниндзя всех
+              времён!
             </div>
             <div class="main-board_buttons">
               <a class="main-board__button-link" href="#">
@@ -123,6 +126,42 @@
           </div>
         </div>
       </section>
+      <section class="first-season_section" id="first-season">
+        <div class="main-wrapper">
+          <h2><span>first-season discription</span></h2>
+          <div>
+            <div class="first-season_container">
+              <h3>Наруто 1 сезон</h3>
+              <p>
+                Manga Canon Episodes:<br />
+                <br />
+                1-6, 8, 10-13, 17, 22, 25, 31-36, 42, 48, 50-51, 61-62, 64-65,
+                67-68, 73, 75-82, 84-96, 107-111, 115-125, 128-129, 132-135
+                <br />
+                <br />
+                Mixed Canon/Filler Episodes:
+                <br />
+                <br />7, 9, 14-16, 18-21, 23-24, 27-30, 37-41, 43-47, 49, 52-60,
+                63, 66, 69-72, 74, 83, 98, 100, 112-114, 126-127, 130-131,
+                141-142, 220
+              </p>
+              <ul>
+                <li>26</li>
+                <li>97</li>
+                <li>101-106</li>
+                <li>136-140</li>
+                <li>143-219</li>
+              </ul>
+            </div>
+            <img
+              class="first-season-img"
+              src="./images/firstseasonimg2.jpeg"
+              alt="picture-of-first-season"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="second-season">hello!</section>
     </main>
   </body>
 </html>
