--- a/landing/index.html
+++ b/landing/index.html
@@ -131,28 +131,98 @@
           <h2><span>first-season discription</span></h2>
           <div>
             <div class="first-season_container">
-              <h3>Наруто 1 сезон</h3>
+              <h3>Наруто 1 сезон :</h3>
               <p>
-                Manga Canon Episodes:<br />
+                Каноничные эпизоды по манге:
                 <br />
-                1-6, 8, 10-13, 17, 22, 25, 31-36, 42, 48, 50-51, 61-62, 64-65,
-                67-68, 73, 75-82, 84-96, 107-111, 115-125, 128-129, 132-135
-                <br />
-                <br />
-                Mixed Canon/Filler Episodes:
-                <br />
-                <br />7, 9, 14-16, 18-21, 23-24, 27-30, 37-41, 43-47, 49, 52-60,
-                63, 66, 69-72, 74, 83, 98, 100, 112-114, 126-127, 130-131,
-                141-142, 220
               </p>
-              <ul>
-                <li>26</li>
-                <li>97</li>
-                <li>101-106</li>
-                <li>136-140</li>
-                <li>143-219</li>
-              </ul>
+              <div class="first-season_series-list">
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">1-6</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">10-13</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">17</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">22</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">25</a></li>
+                </ul>
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">31-36</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">42</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">48</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">50-51</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">61-62</a></li>
+                </ul>
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">64-65</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">67-68</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">73</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">75-82</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">84-96</a></li>
+                </ul>
+                <ul>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">107-111</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">115-125</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">128-129</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">132-135</a>
+                  </li>
+                </ul>
+              </div>
+              <br />
+              <p>Аниме канон:</p>
+              <br />
+              <div class="first-season_series-list">
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">7</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">9</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">14-16</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">18-21</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">23-24</li>
+                </ul>             <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">27-30</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">37-41</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">43-47</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">49</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">52-60</a></li>
+                </ul>
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">63</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">66</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">69-72</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">74</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">83</a></li>
+                  <li><a href="https://animebuff.ru/anime/naruto">98</a></li>
+                </ul>
+                <ul>
+                  <li><a href="https://animebuff.ru/anime/naruto">100</a></li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">112-114</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">126-127</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">130-131</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">141-142</a>
+                  </li>
+                  <li><a href="https://animebuff.ru/anime/naruto">220</a></li>
+                </ul>
+                <br />
+              </div>
+              <p>Филлеры:</p>
+              <br />
+              <div class="first-season_series-list">
+                26,97,101-16,136-140,143-219.
+              </div>
             </div>
+
             <img
               class="first-season-img"
               src="./images/firstseasonimg2.jpeg"
