second season almost done

--- a/landing/index.html
+++ b/landing/index.html
@@ -24,8 +24,8 @@
             <li><a href="#">Home</a></li>
             <li><a href="#services-link">team 7</a></li>
             <li><a href="#first-season">First season</a></li>
+            <li><a href="#other-teams">Other teams</a></li>
             <li><a href="#">Second season</a></li>
-            <li><a href="#">Our blog</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -170,7 +170,211 @@
           </div>
         </div>
       </section>
-      <section class="second-season">hello!</section>
+      <section class="other-teams_section" id="other-teams">
+        <div class="main-wrapper">
+          <h2><span>Other Teams</span></h2>
+          <div class="other-teams_list">
+            <div class="other-teams_block">
+              <div class="card-face-one">
+                <p class="team-card_name">Команда 10</p>
+                <img
+                  class="card-face-one-logo"
+                  src="./images/card-face1-konoha.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-face-two two">
+                <div class="card-face-two_content">
+                  <img
+                    class="team-card_photo"
+                    src="./images/team10.jpeg"
+                    alt=""
+                  />
+                  <p class="team-card_discription">
+                    Команда Асумы <br />(яп. アスマ班, Асума-Хан), также
+                    известная как Команда 10 — поколение Трио Ино-Шика-Чоо (яп.
+                    いの しか ちょうトリオ).
+                  </p>
+                  <p class="team-card_composition">Состав команды:</p>
+                  <ul>
+                    <li>Капитан : Асума Сарутоби</li>
+                    <li>Чоуджи Акимичи</li>
+                    <li>Шикамару Нара</li>
+                    <li>Ино Яманака</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="other-teams_block">
+              <div class="card-face-one">
+                <p class="team-card_name">Команда 3</p>
+                <img
+                  class="card-face-one-logo"
+                  src="./images/card-face1-konoha.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-face-two two">
+                <div class="card-face-two_content">
+                  <img
+                    class="team-card_photo"
+                    src="./images/team3.jpeg"
+                    alt=""
+                  />
+                  <p class="team-card_discription">
+                    Команда Гая <br />команда во главе с Майто Гаем, которая
+                    была сформирована за год до других основных команд Конохи
+                    всей серии. Все члены Команды специализируются на ближнем
+                    бое
+                  </p>
+                  <p class="team-card_composition">Состав команды:</p>
+                  <ul>
+                    <li>Капитан : Майто Гай</li>
+                    <li>Неджи Хьюга</li>
+                    <li>Тентен</li>
+                    <li>Рок Ли</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="other-teams_block">
+              <div class="card-face-one">
+                <p class="team-card_name">Команда 8</p>
+                <img
+                  class="card-face-one-logo"
+                  src="./images/card-face1-konoha.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-face-two two">
+                <div class="card-face-two_content">
+                  <img
+                    class="team-card_photo"
+                    src="./images/team8.jpeg"
+                    alt=""
+                  />
+                  <p class="team-card_discription">
+                    Команда Асумы (яп. アスマ班, Асума-Хан), также известная как
+                    Команда 10 — поколение Трио Ино-Шика-Чоо (яп. いの しか
+                    ちょうトリオ, Ино-Щика-Чоо Торио).
+                  </p>
+                  <p class="team-card_composition">Состав команды:</p>
+                  <ul>
+                    <li>Капитан : Асума Сарутоби</li>
+                    <li>Чоуджи Акимичи</li>
+                    <li>Шикамару Нара</li>
+                    <li>Ино Яманака</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="other-teams_block">
+              <div class="card-face-one">
+                <p class="team-card_name">Команда Песка</p>
+                <img
+                  class="card-face-one-logo"
+                  src="./images/card-face1-sand.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-face-two two">
+                <div class="card-face-two_content">
+                  <img
+                    class="team-card_photo"
+                    src="./images/teamsand.jpeg"
+                    alt=""
+                  />
+                  <p class="team-card_discription">
+                    Команда Асумы (яп. アスマ班, Асума-Хан), также известная как
+                    Команда 10 — поколение Трио Ино-Шика-Чоо (яп. いの しか
+                    ちょうトリオ, Ино-Щика-Чоо Торио).
+                  </p>
+                  <p class="team-card_composition">Состав команды:</p>
+                  <ul>
+                    <li>Капитан : Асума Сарутоби</li>
+                    <li>Чоуджи Акимичи</li>
+                    <li>Шикамару Нара</li>
+                    <li>Ино Яманака</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="other-teams_block">
+              <div class="card-face-one">
+                <p class="team-card_name">Команда Кабуто</p>
+                <img
+                  class="card-face-one-logo"
+                  src="./images/card-face1-konoha.png"
+                  alt=""
+                />
+              </div>
+              <div class="card-face-two two">
+                <div class="card-face-two_content">
+                  <img
+                    class="team-card_photo"
+                    src="./images/teamkabuto.jpeg	"
+                    alt=""
+                  />
+                  <p class="team-card_discription">
+                    Команда Асумы (яп. アスマ班, Асума-Хан), также известная как
+                    Команда 10 — поколение Трио Ино-Шика-Чоо (яп. いの しか
+                    ちょうトリオ, Ино-Щика-Чоо Торио).
+                  </p>
+                  <p class="team-card_composition">Состав команды:</p>
+                  <ul>
+                    <li>Капитан : Асума Сарутоби</li>
+                    <li>Чоуджи Акимичи</li>
+                    <li>Шикамару Нара</li>
+                    <li>Ино Яманака</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="second-season" id="second-season">
+        <div class="main-wrapper">
+          <h2><span>second-season discription</span></h2>
+
+          <div class="second-season_container">
+            <div class="second-season-content">
+              <h3>Наруто SHIPPUDEN :</h3>
+              <p>
+                Филлеры:
+                <br />
+              </p>
+              <div class="second-season_series-list">
+                <ul>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">26 серия</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">97 серия</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >101-116 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >136-140 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >143-219 серии</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <img src="./images/second-seasonimg2.jpeg" alt="" />
+            <p class="fukaku-cypher">9,31,8<br />106,7<br />207,15</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
