second season done

--- a/landing/index.html
+++ b/landing/index.html
@@ -336,7 +336,6 @@
       <section class="second-season" id="second-season">
         <div class="main-wrapper">
           <h2><span>second-season discription</span></h2>
-
           <div class="second-season_container">
             <div class="second-season-content">
               <h3>Наруто SHIPPUDEN :</h3>
@@ -347,31 +346,138 @@
               <div class="second-season_series-list">
                 <ul>
                   <li>
-                    <a href="https://animebuff.ru/anime/naruto">26 серия</a>
+                    <a href="https://animebuff.ru/anime/naruto">57-70 серии</a>
                   </li>
                   <li>
-                    <a href="https://animebuff.ru/anime/naruto">97 серия</a>
+                    <a href="https://animebuff.ru/anime/naruto">91-111 серии</a>
                   </li>
                   <li>
                     <a href="https://animebuff.ru/anime/naruto"
-                      >101-116 серии</a
+                      >127-128 серии</a
                     >
                   </li>
                   <li>
                     <a href="https://animebuff.ru/anime/naruto"
-                      >136-140 серии</a
+                      >144-151 серии</a
                     >
                   </li>
                   <li>
                     <a href="https://animebuff.ru/anime/naruto"
-                      >143-219 серии</a
+                      >144-151 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >170-171 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >176-177 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >182-196 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">223-242серии</a>
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >257-260 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">271 серия</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >279-281 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >284-295 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >303-320 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >347-349 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >351-359 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">361 серия</a>
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">376-377</a>
+                  </li>
+                </ul>
+                <ul>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >389-390 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">
+                      394-413 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >416-417 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >422-423 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >427-449 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto">
+                      460-461 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >464-468 серии</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://animebuff.ru/anime/naruto"
+                      >480-483 серии</a
                     >
                   </li>
                 </ul>
               </div>
             </div>
-            <img src="./images/second-seasonimg2.jpeg" alt="" />
-            <p class="fukaku-cypher">9,31,8<br />106,7<br />207,15</p>
+            <div class="img-containter">
+              <img
+                class="jiraya-photo"
+                src="./images/second-seasonimg2.jpeg"
+                alt=""
+              />
+              <p class="fukaku-cypher">9,31.8<br />106,7<br />207,15</p>
+            </div>
           </div>
         </div>
       </section>
