--- a/landing/index.html
+++ b/landing/index.html
@@ -25,7 +25,7 @@
             <li><a href="#services-link">team 7</a></li>
             <li><a href="#first-season">First season</a></li>
             <li><a href="#other-teams">Other teams</a></li>
-            <li><a href="#">Second season</a></li>
+            <li><a href="#second-season">Second season</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -482,5 +482,24 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="main-wrapper">
+        <div class="footer-content">
+          <h3>made by</h3>
+          <h2 class="my-name">Alexander Koryakin</h2>
+          <div class="social-media-links">
+            <a href="https://t.me/koryacore"
+              ><i class="fa-brands fa-telegram"></i
+            ></a>
+            <a href="https://wa.me/+79133993776">
+              <i class="fa-brands fa-whatsapp"></i
+            ></a>
+            <a href="https://vk.com/alek_core"
+              ><i class="fa-brands fa-vk"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
