rebase for GH-pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#first-season">First season</a></li>
             <li><a href="#other-teams">Other teams</a></li>
             <li><a href="#second-season">Second season</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#footer">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -482,7 +482,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="footer">
       <div class="main-wrapper">
         <div class="footer-content">
           <h3>made by</h3>
